<resources>
    <string name="app_name">Zuni</string>
    <string name="title_activity_main">Zuni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Eventos   ***************************************************************************** -->
    <string name="e_fecha_evento_string">Date:</string>

    <string name="e_cancel_string">Cancel</string>
    <string name="e_reset_string">Reset</string>
    <string name="e_submit_string">Submit</string>

    <string name="e_ubicacion_string">Location</string>
    <string name="e_title_string">Title</string>
    <string name="e_descripcion_string">Description</string>
    <string name="e_enter_description_string">Enter description</string>
    <string name="e_time_and_date_string">Time and Date</string>
    <string name="e_no_date_set_string">0000-00-00</string>
    <string name="e_no_time_set_string">00:00:00</string>
    <string name="e_choose_date_string">Choose Date</string>
    <string name="e_choose_time_string">Choose Time</string>
    <string name="e_enter_title_string">Enter title</string>

    <string name="e_delete_evento">Delete</string>
    <string name="e_edit_evento">Edit</string>
    <!-- *************************************************************************************** -->

    <string name="menu_previsiones">Daily Forecast</string>
    <string name="menu_historico">Historical weather</string>
    <string name="menu_eventos">Events</string>
    <string name="menu_detalles">Today Forecast</string>
    <string name="menu_ubicaciones">Locations</string>
    <string name="CURRENT">CURRENT</string>
    <string name="img_description1">Meteorologic image</string>
    <string name="GO">GO!</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Historical_save_window_name">Save Historical</string>
    <string name="Historical_save_msg1">Historical added (yesterday) of city</string>
    <string name="Historical_search_err1_msg">You must enter a name in the Text Box</string>
    <string name="Historical_search_err2_msg">Can not get the Historical Data</string>
    <string name="Historical_search_err3_msg">There is no locations in the list. Add it from Locations menu</string>
    <string name="Historical_save_cancel_msg">The historical save action was aborted</string>
    <string name="Max" translatable="false">Max:</string>
    <string name="Min" translatable="false">Min:</string>
    <string name="H">Precip:</string>
    <string name="WS">Wind Speed:</string>
    <string name="introduceCity">Introduce a city...</string>
    <string name="Historical_remove_err_msg">This historical can not be removed</string>
    <string name="Search">Search</string>
    <string name="Historical_search_msg1">Showing historical of</string>
    <string name="Historical_save_err1_msg">No historical was recovered</string>
    <string name="Historical_save_ok_msg">Historical added successfully</string>
</resources>