<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_detalles"
            android:title="@string/menu_detalles" />
        <item
            android:id="@+id/nav_previsiones"
            android:title="@string/menu_previsiones" />
        <item
            android:id="@+id/nav_historical"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_eventos"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_ubicaciones"
            android:title="@string/menu_ubicaciones" />
    </group>
</menu>