<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_previsiones">

    <fragment
        android:id="@+id/nav_detalles"
        android:name="es.unex.giis.zuni.ui.detalles.DetallesFragment"
        android:label="@string/menu_detalles"
        tools:layout="@layout/fragment_detalles" />

    <fragment
        android:id="@+id/nav_previsiones"
        android:name="es.unex.giis.zuni.ui.previsiones.PrevisionesFragment"
        android:label="@string/menu_previsiones"
        tools:layout="@layout/fragment_previsiones" />

    <fragment
        android:id="@+id/nav_historical"
        android:name="es.unex.giis.zuni.ui.historico.HistoricoFragment"
        android:label="@string/menu_historico"
        tools:layout="@layout/fragment_historico" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="es.unex.giis.zuni.ui.eventos.EventosFragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="es.unex.giis.zuni.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_ubicaciones"
        android:name="es.unex.giis.zuni.ui.ubicaciones.UbicacionesFragment"
        android:label="@string/menu_ubicaciones"
        tools:layout="@layout/fragment_ubicaciones" />
</navigation>