<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/eventoTituloLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_title_string"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/eventoTituloInput"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoTituloLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/e_enter_title_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Priority -->

    <TextView
        android:id="@+id/eventoDescripcionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoTituloInput"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/e_descripcion_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/descripcionGroup"
        android:layout_width="381dp"
        android:layout_height="150dp"
        android:layout_below="@id/eventoDescripcionLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eventoDescripcionInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/e_enter_description_string"
            android:inputType="textPersonName" />

    </RadioGroup>

    <!-- Time and Date -->

    <TextView
        android:id="@+id/eventoUbicacionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descripcionGroup"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/e_ubicacion_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/ubicacionGroup"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventoUbicacionLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:text="@string/e_ubicacion_string">

        <Spinner
            android:id="@+id/ubicacionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/eventoFechaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubicacionGroup"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eventoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoFechaLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/e_no_date_set_string" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoFechaLabel"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginRight="43dp"
        android:text="@string/e_no_time_set_string" />

    <Button
        android:id="@+id/eventoFechaInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventoDate"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/e_choose_date_string" />

    <!-- Buttons -->

    <Button
        android:id="@+id/eventoHoraInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_alignTop="@id/eventoFechaInput"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="15dp"
        android:text="@string/e_choose_time_string" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/e_cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/submitButton"
        android:layout_toLeftOf="@+id/submitButton"
        android:layout_toEndOf="@+id/cancelButton"
        android:layout_toRightOf="@+id/cancelButton"
        android:text="@string/e_reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/e_submit_string" />

</RelativeLayout>