<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_evento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/eventoTituloLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_title_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/eventoTituloInput"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoTituloLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/e_enter_title_string"
        android:inputType="textShortMessage"
        android:textColor="#FFFFFF"
        android:textColorHint="#AEE3E3E3">

        <requestFocus />
    </EditText>

    <!-- Priority -->

    <TextView
        android:id="@+id/eventoDescripcionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoTituloInput"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/e_descripcion_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <!-- Time and Date -->

    <TextView
        android:id="@+id/eventoUbicacionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoDescripcionInput"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_ubicacion_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/ubicacionGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/eventoUbicacionLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:text="@string/e_ubicacion_string">

        <Spinner
            android:id="@+id/eventoUbicacionSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:textColor="#E3E3E3" />

    </RadioGroup>

    <TextView
        android:id="@+id/eventoFechaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubicacionGroup"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoFechaLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/e_no_date_set_string"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/eventoTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventoFechaLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="3dp"
        android:text="@string/e_no_time_set_string"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/eventoFechaButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventoDate"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/e_choose_date_string" />

    <Button
        android:id="@+id/eventoHoraButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventoTime"
        android:layout_alignTop="@id/eventoFechaButton"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="15dp"
        android:text="@string/e_choose_time_string" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/e_cancel_string" />

    <Button
        android:id="@+id/resetButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:layout_marginBottom="14dp"
        android:text="@string/e_reset_string" />

    <Button
        android:id="@+id/submitButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/e_submit_string" />

    <EditText
        android:id="@+id/eventoDescripcionInput"
        android:layout_width="387dp"
        android:layout_height="150dp"
        android:layout_below="@+id/eventoDescripcionLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/e_enter_description_string"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#AEE3E3E3" />

</RelativeLayout>